--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ sidebar-avatar: /img/wengfan.png      # use absolute URL, seeing it's used in bo
 
 # SNS settings
 RSS: false
-weibo_username:     蓝with黑
-zhihu_username:     蓝with黑
+weibo_username:     1397020721
+zhihu_username:     baggiomygod
 github_username:    baggiomygod
 # facebook_username:  baiying.qiu.7
 # jianshu_username:   e71990ada2fd
