--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 蓝with黑 Blog
 SEOTitle: 翁凡的博客 | wenngfan Blog
-header-img: img/namucuo.jpeg
+header-img: img/wanxia.jpeg
 email: fan1130work@163.com
 description: "Every failure is leading towards success."
 keyword: "翁凡的博客, baggiomygod, 前端, vue, react, angular, pwa, javascript, typescript"
