--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 蓝with黑 Blog
-SEOTitle: 翁凡的博客 | wenngfan Blog
+SEOTitle: 翁凡的博客
 header-img: img/wanxia.jpeg
 email: fan1130work@163.com
 description: "Every failure is leading towards success."
