--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 蓝with黑 Blog
 SEOTitle: 翁凡的博客
 header-img: img/wanxia.jpeg
 email: fan1130work@163.com
-description: "Every failure is leading towards success."
+description: ""
 keyword: "翁凡的博客, baggiomygod, 前端, vue, react, angular, pwa, javascript, typescript"
 url: "http://baggiomygod.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
